keycloack/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: keycloack-tls-ingress
  annotations:
    cert-manager.io/issuer: "keycloack-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: keycloack.ingress.kube2.okd.piensoluegoinstalo.com
      http:
        paths:
          # - path: /.well-known/acme-challenge/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: cm-acme-http-solver-bdjnm
          #       port:
          #         number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-keycloak-service
                port:
                  number: 8081
  tls:
    - hosts:
        - keycloack.ingress.kube2.okd.piensoluegoinstalo.com
      secretName: keycloack-tls-ingress
