keycloack/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example-keycloak-route
spec:
  host: keycloack.apps.kube2.okd.piensoluegoinstalo.com
  path: /
  to:
    kind: Service
    name: example-keycloak-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
